v3.1_issue_1099: Removed all the gradle specific deprecation warnings, all the java deprecation warnings, updated dotnet tool to 8.0 on relevant docker files, upgraded jaxb plugin, and fixed unit tests.